# src/handler/resource/pagination_resource.go
@@ -1,0 +1,11 @@
+package resource
+
+import "momonga_blog/api"
+
+func MapPaginationToAPI(total int, page int, limit int) api.Pagenation {
+	return api.Pagenation{
+		Total: total,
+		Page:  page,
+		Limit: limit,
+	}
+}
